--- a/banano-sports-pools/requirements.txt
+++ b/banano-sports-pools/requirements.txt
@@ -10,11 +10,13 @@ ed25519-blake2b==1.4.1
 Flask==3.0.3
 flask-talisman==1.1.0
 greenlet==3.0.3
+gunicorn==23.0.0
 idna==3.8
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 numpy==2.1.1
+packaging==24.1
 pandas==2.2.2
 psycopg2==2.9.9
 python-dateutil==2.9.0.post0
